// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaBlock no data, no fallback 1`] = `
<button
  className="MediaBlock"
  data-draftail-trigger={true}
  onClick={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    aria-hidden={true}
    className="MediaBlock__icon-wrapper"
  >
    <Icon
      className="MediaBlock__icon"
      icon="#icon-test"
    />
  </span>
  <img
    alt=""
    className="MediaBlock__img"
    src=""
    width="256"
  />
  <span
    className="MediaBlock__fallback"
  />
</button>
`;

exports[`MediaBlock no data, with fallback 1`] = `
<button
  className="MediaBlock"
  data-draftail-trigger={true}
  onClick={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    aria-hidden={true}
    className="MediaBlock__icon-wrapper"
  >
    <Icon
      className="MediaBlock__icon"
      icon="#icon-test"
    />
  </span>
  <img
    alt=""
    className="MediaBlock__img"
    src=""
    width="256"
  />
  <span
    className="MediaBlock__fallback"
  >
    Fallback text
  </span>
</button>
`;

exports[`MediaBlock on click tooltip opens 1`] = `
<div>
  <div
    class="Tooltip Tooltip--top-left"
    role="tooltip"
    style="top: 0px; inset-inline-start: 0;"
  >
    <div
      style="max-width: 300px;"
    >
      <div
        id="test"
      >
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`MediaBlock renders 1`] = `
<button
  className="MediaBlock"
  data-draftail-trigger={true}
  onClick={[Function]}
  tabIndex={-1}
  type="button"
>
  <span
    aria-hidden={true}
    className="MediaBlock__icon-wrapper"
  >
    <Icon
      className="MediaBlock__icon"
      icon="#icon-test"
    />
  </span>
  <img
    alt=""
    className="MediaBlock__img"
    src="example.png"
    width="256"
  />
</button>
`;
